--- a/new.html
+++ b/new.html
@@ -65,7 +65,7 @@
           </label>
         </form>
       </section>
-      <section id="articles" class="tab-content">
+      <section id="article-preview" class="tab-content">
 
       </section>
       <section id="article-export">
@@ -82,11 +82,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <!-- REVIEW: Include script tags for 3rd party libraries to enable markdown rendering and code syntax highlighting -->
-    <script src="/vendor/scripts/marked.js"></script>
-    <script src="/vendor/scripts/highlight.pack.js"></script>
-    <script type="text/javascript" src="/scripts/blogArticles.js"></script>
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
+    <script src="vendor/scripts/marked.js"></script>
+    <script src="vendor/scripts/highlight.pack.js"></script>
+    <script type="text/javascript" src="scripts/blogArticles.js"></script>
+    <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <script>
       // REVIEW: Initialize page behaviors, and run code:
       articleView.initNewArticlePage();
